@@ -1,0 +1,7 @@
+int *g();
+
+template <class T> 
+void f(int i)
+{
+  int *p = &g()[3];
+}
